plugins {
    id 'java'
    id("xyz.jpenilla.run-paper") version "2.3.1"
    id("com.github.johnrengelman.shadow") version "8.1.1"
}

group = 'me.isoham.imageframe.mde'
version = '1.0'

repositories {
    mavenCentral()
    maven {
        name = "spigotmc-repo"
        url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
    }

    maven { url = 'https://repo.loohpjames.com/repository' }
}

dependencies {
    compileOnly("org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT")
    compileOnly("com.loohp:ImageFrame:1.8.7.4")

    implementation("net.dv8tion:JDA:6.3.2") {
        exclude module: "opus-java"
        exclude module: "tink"
    }

    implementation("org.xerial:sqlite-jdbc:3.45.1.0")
}

tasks {

    shadowJar {
        archiveClassifier.set("")
        relocate "net.dv8tion.jda", "me.isoham.imageframe.mde.libs.jda"
        relocate "okhttp3", "me.isoham.imageframe.mde.libs.okhttp"
        relocate "okio", "me.isoham.imageframe.mde.libs.okio"
        relocate "com.fasterxml.jackson", "me.isoham.imageframe.mde.libs.jackson"

        mergeServiceFiles()

        exclude("org/sqlite/native/**")
        exclude("META-INF/*.SF")
        exclude("META-INF/*.DSA")
        exclude("META-INF/*.RSA")
    }

    build {
        dependsOn(shadowJar)
    }

    runServer {
        minecraftVersion("1.21")
    }
}

def targetJavaVersion = 17

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.release.set(targetJavaVersion)
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset 'UTF-8'

    filesMatching('plugin.yml') {
        expand props
    }
}